--- a/src/pages/auth/login/login.module.scss
+++ b/src/pages/auth/login/login.module.scss
@@ -183,11 +183,14 @@
   .image_section {
     display: flex;
     flex-direction: row;
+    align-items: center;
+    justify-content: center;
     width: 50%;
     height: 100vh;
-    background: linear-gradient(180deg, #545be8 0%, #1815aa 100%);
+    background: linear-gradient(180deg, #d6dff9 0%, #d6dff9 100%);
     img{
         object-fit: contain;
+        width: 80%;
     }
     @media screen and (max-width: 900px) {
       display: none;
