--- a/src/components/MenuCheckout/menucheckout.module.scss
+++ b/src/components/MenuCheckout/menucheckout.module.scss
@@ -1,7 +1,7 @@
 .menuCheckOut {
   position: relative;
   a {
-    padding: 5px;
+    // padding: 5px;
     .action_layout {
       display: none;
       flex-direction: column;
