--- a/src/layout/Dashboard/student/rightbar/righbar.module.scss
+++ b/src/layout/Dashboard/student/rightbar/righbar.module.scss
@@ -17,6 +17,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-evenly;
+    width: 100%;
     margin: 15px;
     a {
       // color: #969696;
@@ -26,7 +27,7 @@
       }
       img {
         object-fit: contain;
-        width: 70%;
+        border-radius: 50%;
       }
     }
   }
