--- a/src/layout/welcome/Offer/offer.module.scss
+++ b/src/layout/welcome/Offer/offer.module.scss
@@ -62,7 +62,7 @@
       display: flex;
       flex-direction: column;
       padding: 20px;
-      background: #dcddec;
+      background: #f5f5f5;
       border-radius: 4.1186px;
       width: 300px;
       margin-right: 20px;
