--- a/src/pages/student/course/[course]/courseview.module.scss
+++ b/src/pages/student/course/[course]/courseview.module.scss
@@ -5,7 +5,7 @@
   font-size: calc(10px + 2vmin);
   overflow-y: auto;
   // color: white;
-  @media screen and (max-width: 760px) {
+  @media screen and (max-width: 900px) {
     min-height: 40vh;
     height: 83vh;
     flex-direction: column;
@@ -23,10 +23,10 @@
     margin: 10px 0px 10px 0px;
     padding: 0px 50px 0px 50px;
 
-    @media screen and (max-width: 760px) {
+    @media screen and (max-width: 900px) {
       width: 100%;
       padding: 0px;
-      min-height: 50vh;
+      // min-height: 50vh;
       align-items: center;
       overflow-y: auto;
       margin: 0;
@@ -44,7 +44,7 @@
       top: 0;
       width: 100%;
       z-index: 90;
-      @media screen and (max-width: 760px) {
+      @media screen and (max-width: 900px) {
         align-items: flex-start;
         justify-content: flex-start;
         width: 100%;
@@ -96,6 +96,9 @@
     .body_container {
       display: flex;
       flex-direction: row;
+      @media screen and (max-width: 900px) {
+        width: 100%;
+      }
       .player_section {
         display: flex;
         flex-direction: column;
@@ -103,8 +106,9 @@
         padding: 10px;
         width: 72%;
         position: absolute;
+        margin-left:-10px;
         top: 60px;
-        @media screen and (max-width: 760px) {
+        @media screen and (max-width: 900px) {
           width: 100vw;
           justify-content: center;
         }
@@ -113,13 +117,15 @@
           padding: 10px;
           width: 100%;
           margin-bottom: 5px;
+          font-weight: 700;
           &:hover {
             text-decoration: underline;
           }
         }
         .player {
           padding: 10px;
-          @media screen and (max-width: 760px) {
+          font-size: 15px;
+          @media screen and (max-width: 900px) {
             width: 100%;
             justify-content: center;
           }
@@ -135,7 +141,7 @@
             align-items: center;
             justify-content: space-evenly;
             padding: 10px;
-            @media screen and (max-width: 760px) {
+            @media screen and (max-width: 900px) {
               max-width: 100vw;
               overflow-x: auto;
               align-items: center;
@@ -143,7 +149,7 @@
             }
             .mobile {
               display: none;
-              @media screen and (max-width: 760px) {
+              @media screen and (max-width: 900px) {
                 display: flex;
               }
             }
@@ -154,10 +160,13 @@
               line-height: 16px;
               padding: 10px 20px;
               border: 0.5 solid;
+              // width: 100px;
+              
               outline: none;
               cursor: pointer;
-              @media screen and (max-width: 760px) {
+              @media screen and (max-width: 900px) {
                 padding: 15px;
+                height: 15vh;
               }
               &:hover {
                 color: #000000;
@@ -190,7 +199,7 @@
           padding: 10px;
           //   background-color: #545be8;
           //   color: white;
-          @media screen and (max-width: 760px) {
+          @media screen and (max-width: 900px) {
             display: none;
           }
 
@@ -199,11 +208,12 @@
             flex-direction: row;
             align-items: center;
             padding: 5px 15px;
-            border: 1px solid;
+            // border: 1px solid;
+            border-radius: 3px;
             font-size: 14px;
             font-weight: 400;
             background-color: rgba(0, 0, 0, 0.07);
-            color: black;
+            // color: black;
             cursor: pointer;
             &:hover{
                 border: 1px solid rgba(0, 0, 0, 0.07); 
@@ -240,7 +250,8 @@
           }
         }
         .lecture_container {
-          @media screen and (max-width: 760px) {
+          padding: 10px;
+          @media screen and (max-width: 900px) {
             display: none;
           }
         }
